# hero_geant4

./: .gitignore
project/: .gitignore  CMakeLists.txt  allEnergiesFromIntPam_run.sh  erun.sh  exampleB5.cc  exampleB5.in  grun.sh  hero.cc  hrun.sh  mrun.sh  one_year_run.sh  prun.sh  run.sh  setup.sh  tmp.sh
project/include/: DetectorConstruction.hh  HEROActionInitialization.hh  HERODetector.hh  HERODetectorConstruction.hh  HEROEventAction.hh  HEROPhysicsList.hh  HEROPrimaryGenerator.hh  HERORunAction.hh  HEROSteppingAction.hh  OpticalPhysicsWithoutCherenkov.hh
project/input/: 128usectable.txt  256usectable.txt  IntPam2009.txt  IntPam2010.txt  IntPam2014.txt  cumulative_func_-b.txt  cumulative_func_2010.txt  cumulative_func_2014.txt  cumulative_func_b.txt  one_year_protons_number_7e-8%.txt  pdg_g4_info.txt  table.txt
project/macro/: alletime.C  alphaMeanT.C  depositEAlphaCount.C  energyNevents.C  graph.C  meanAndStd.C  meanT.C  neutronsMeanT.C  numberOfParticles.C  radiusVsTimeDraw.C  radius_draw.C  sumedep.C  time.C
project/macro/background/: background.C  run.sh
project/macro/boron_diff_percent/: boron_percent_vs_edep.C  same_canv_gr.C  sample_hist.C
project/macro/condor/: merge.C
project/macro/condor/background/: merge.C
project/macro/diff_r/: build_background_edep_hists.C  build_root_file_contains_hists.C  demon_40.sh  resolution.C  sim_params_calculation.C  sim_params_calculation_agg.C  sum_edep_distribution_calc.C  wb_build_root_file_contains_hists.C
project/macro/energy_source/: culc_protons_full_energy.C  energy_release.C  run.sh
project/macro/energy_source/output/: full_edeps.txt  protons_full_energy.txt
project/macro/jupyter/: approxymation.ipynb  check_energymc_and_timemc.ipynb  cumulative_func_for_background.ipynb  detectors_mass_calculation.ipynb
project/macro/precalculations/: Icalc.C  energy.C  energymcCheack.C  graph.C  mass.py  olve_zip_test.ipynb  theta_or_cos_theta_test.py
project/macro/precalculations/input/: mcenergy.txt
project/macro/processing/: NVsA.C  alletime.C  numberOfParticles.C  radiusVsTimeDraw.C  trash.C  trashold.C
project/macro/scint_light/: combine_threads.C  e_resolution.C  lost_energy.C  p_resolution.C  resolution.C
project/macro/single_energy/: extract.C
project/macro/thresholdscalculation/: commonthresholdscalculation.C  countdistribution.C  diff_particles_1_GeV_alpha_count.C  diff_particles_alpha_count.C  drawTime.C  electro.C  integral.py  make_background_hist.C  mean_alpha_count.C  normThresh.C  protons_alpha_count.C  pull_alpha.sh  pull_alpha_background.C  thd_count_distr.C  thd_for_diff_e.C  thresholdscalculation.C
project/macro/thresholdscalculation/input/: counts.txt
project/macro/validation/: check_hist_boards.C  displacement.C  energy_save_check.C  mean_bakcground_count_and_std.C  testStartTime.C  test_unique_pdg_for_ev_id_and_track_id_pair.C
project/macro/validation/input/: start_times.txt
project/macro/x_year_stat/one/: calculate_alpha_counts_per_intervals.C  draw.C  run_parallel.sh
project/output/: B5.root  B5ntuple.root  CMakeCache.txt  bindrootfiles.C  bindrootfiles.sh  out.txt
project/src/: DetectorConstruction.cc  HEROActionInitialization.cc  HERODetector.cc  HERODetectorConstruction.cc  HEROEventAction.cc  HEROPhysicsList.cc  HEROPrimaryGenerator.cc  HERORunAction.cc  HEROSteppingAction.cc  OpticalPhysicsWithoutCherenkov.cc
(+1 files in other folders)
